network/cilium/1.10/gen-output/cilium-node-init.kube-network.daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: cilium-node-init
  name: cilium-node-init
  namespace: kube-network
spec:
  selector:
    matchLabels:
      app: cilium-node-init
  template:
    metadata:
      annotations: null
      labels:
        app: cilium-node-init
    spec:
      containers:
      - env:
        - name: CHECKPOINT_PATH
          value: /tmp/node-init.cilium.io
        - name: STARTUP_SCRIPT
          value: |
            [...]
        image: quay.io/cilium/startup-script:62bfbe88c17778aad7bef9fa57ff9e2d4a9ba0d8
        imagePullPolicy: IfNotPresent
        name: node-init
        securityContext:
          privileged: true
      hostNetwork: true
      hostPID: true
      priorityClassName: system-node-critical
      tolerations:
      - operator: Exists
