network/cilium/1.10/gen-output/cilium-agent.kube-network.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: cilium
  name: cilium-agent
  namespace: kube-network
spec:
  clusterIP: None
  ports:
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: prometheus
  - name: envoy-metrics
    port: 9095
    protocol: TCP
    targetPort: envoy-metrics
  selector:
    k8s-app: cilium
  type: ClusterIP
