network/cilium/1.10/gen-output/hubble-metrics.kube-network.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9091"
    prometheus.io/scrape: "true"
  labels:
    k8s-app: hubble
  name: hubble-metrics
  namespace: kube-network
spec:
  clusterIP: None
  ports:
  - name: hubble-metrics
    port: 9091
    protocol: TCP
    targetPort: hubble-metrics
  selector:
    k8s-app: cilium
  type: ClusterIP
